# nipscernweb

./: .gitattributes  .gitignore  404.html  CNAME  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  _headers  about.html  architect.html  cern.html  credits.html  foundation.md  index.html  index3.html  kristoffer.html  nipscern-metadata.rdf  package-lock.json  package.json  pdf-viewer.html  privacy.html  publications.html  qa.html  robots.txt  site.webmanifest  sitemap.xml  terms.html  year-1.md
.claude/: settings.local.json
.githooks/: pre-commit
.github/: CODEOWNERS
Kristoffer/: year-1.md
artigos/: artigos-cern.html  artigos-cs.html  artigos-sapho.html  header-artigos.html
cronos/: kristoffer.html
css/: alice.css  cards.css  cern.css  cgvweb.css  contact.css  dark.css  faq.css  footer-old.css  footer.css  header.css  iframe.css  infinity.css  language.css  menu.css  privacy-service.css  sapho-downlaod.css  sapho.css  search.css  styles.css
csss/: style3.css
data/: i18n.json  news-featured.json  news.json  publications.json  team.json
docs/: index.html  social-sharing-plan.md
js/: 3Dmodel.js  alice.js  cern.js  contact.js  dark.js  faq.js  header.js  index.js  infinity.js  language.js  main.js  sapho-dowload.js  sapho.js  schema.js  script3.js  top.js
kristoffer/: architect.html  cronograma-ano-1.md  culture-gaps.md  logic-gaps.md  year-1.md  year-2.md  year-3.md  year-4.md  year-5.md  year-6.md  year-x.md
news/: applsci-2026-cnn-signal-reconstruction.html  index.html  (+10 more)
tools/share-gen/: Cargo.toml  README.md
tools/share-gen/src/: main.rs
(+369 files in other folders)
